# rust-graphql

./: .env  Cargo.toml  README.md
migrations/2021-06-23-133445_initial/: up.sql
src/: handler.rs  main.rs  models.rs  schema.rs
src/resolver/: mod.rs  mutations.rs  query.rs  root.rs
