[package]
name = "rust-actix-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
juniper = "0.15"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
diesel = { version = "1.4.4", features = ["postgres","r2d2"] }
r2d2 = "0.8"
dotenv = "0.15"
env_logger = "0.8"